packages/change-analysis/test/cdk.out/NestedStackAppBaseResources0B42631E.nested.template.json
{
  "Resources": {
    "MyAppVpc4A7F91FE": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/20",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/Resource"
      }
    },
    "MyAppVpcpublicSubnet1Subnet91BA4ADD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/22",
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet1/Subnet"
      }
    },
    "MyAppVpcpublicSubnet1RouteTable94E77E93": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet1/RouteTable"
      }
    },
    "MyAppVpcpublicSubnet1RouteTableAssociation41ECB4BA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyAppVpcpublicSubnet1RouteTable94E77E93"
        },
        "SubnetId": {
          "Ref": "MyAppVpcpublicSubnet1Subnet91BA4ADD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet1/RouteTableAssociation"
      }
    },
    "MyAppVpcpublicSubnet1DefaultRouteE705E9CF": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyAppVpcpublicSubnet1RouteTable94E77E93"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyAppVpcIGW87384845"
        }
      },
      "DependsOn": [
        "MyAppVpcVPCGW07851A58"
      ],
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet1/DefaultRoute"
      }
    },
    "MyAppVpcpublicSubnet2Subnet17639C4A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/22",
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet2/Subnet"
      }
    },
    "MyAppVpcpublicSubnet2RouteTable1F8ED537": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet2/RouteTable"
      }
    },
    "MyAppVpcpublicSubnet2RouteTableAssociation0AC1C792": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyAppVpcpublicSubnet2RouteTable1F8ED537"
        },
        "SubnetId": {
          "Ref": "MyAppVpcpublicSubnet2Subnet17639C4A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet2/RouteTableAssociation"
      }
    },
    "MyAppVpcpublicSubnet2DefaultRoute5031E4D1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyAppVpcpublicSubnet2RouteTable1F8ED537"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyAppVpcIGW87384845"
        }
      },
      "DependsOn": [
        "MyAppVpcVPCGW07851A58"
      ],
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/publicSubnet2/DefaultRoute"
      }
    },
    "MyAppVpcprivateSubnet1Subnet14C22439": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.8.0/22",
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet1/Subnet"
      }
    },
    "MyAppVpcprivateSubnet1RouteTable1F2C83E8": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet1/RouteTable"
      }
    },
    "MyAppVpcprivateSubnet1RouteTableAssociationA7337CF1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyAppVpcprivateSubnet1RouteTable1F2C83E8"
        },
        "SubnetId": {
          "Ref": "MyAppVpcprivateSubnet1Subnet14C22439"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet1/RouteTableAssociation"
      }
    },
    "MyAppVpcprivateSubnet2Subnet351990FE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.12.0/22",
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet2/Subnet"
      }
    },
    "MyAppVpcprivateSubnet2RouteTable0565A6B2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet2/RouteTable"
      }
    },
    "MyAppVpcprivateSubnet2RouteTableAssociation301E9117": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyAppVpcprivateSubnet2RouteTable0565A6B2"
        },
        "SubnetId": {
          "Ref": "MyAppVpcprivateSubnet2Subnet351990FE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/privateSubnet2/RouteTableAssociation"
      }
    },
    "MyAppVpcIGW87384845": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestedStackApp/BaseResources/MyAppVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/IGW"
      }
    },
    "MyAppVpcVPCGW07851A58": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        },
        "InternetGatewayId": {
          "Ref": "MyAppVpcIGW87384845"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppVpc/VPCGW"
      }
    },
    "MyAppSecuritygroup0D8E3CA8": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NestedStackApp/BaseResources/MyAppSecuritygroup",
        "GroupName": "AppSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "MyAppVpc4A7F91FE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/MyAppSecuritygroup/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAAE02QTQvCMAyGf4v3Wq0IXpUdxIuMTbx3WcT4kUqbKjL23+1UrKckT5L3JTHamLmejpb2EcbQnicdOI+622IQbGuxcFYVBhc9oCocB/ERRBUHzvTAqdGSkONeDToIM93tbzC09mWhythcCOrYML5Xc1a5KLizzQUzz2wVggOyg/BvWJWe7lYwa2xY0Kd8nejDPr+m32ol6YTjFVlUjRA9yXPtXby97f5B3yt2LepTmNzTR8xCm9EpEI19ZKEr6uoTXwQmpkoxAQAA"
      },
      "Metadata": {
        "aws:cdk:path": "NestedStackApp/BaseResources/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Outputs": {
    "NestedStackAppBaseResourcesMyAppSecuritygroupAAD8A718GroupId": {
      "Value": {
        "Fn::GetAtt": [
          "MyAppSecuritygroup0D8E3CA8",
          "GroupId"
        ]
      }
    },
    "NestedStackAppBaseResourcesMyAppVpcpublicSubnet1SubnetE42E0F6ERef": {
      "Value": {
        "Ref": "MyAppVpcpublicSubnet1Subnet91BA4ADD"
      }
    }
  }
}
